changed some width from px to % to fit; fixed bootstrap css declaration; disabled zoom on mobile devices; banner hidden on xs to save space; added log.txt

--- a/ChineseZodiac2GIT/Styles/ChineseZodiac.css
+++ b/ChineseZodiac2GIT/Styles/ChineseZodiac.css
@@ -1,17 +1,21 @@
 
 html {
   font-family: sans-serif;
+
 }
 
 body {
   max-width:1024px;
-  min-height: 768px;
+  width: 90%;
   background-color: #FFF;
   margin: 0 auto;
+  margin-top: 1%;
+  margin-bottom: 1%;
+
 }
 
 hr {
-    width: 500px;
+    width: 50%;
     text-align: center;
     background-color: rgb(0, 141, 153);
     height: 3px;
@@ -61,28 +65,30 @@ td {
 }
 
 #menu {
-    max-width: 1024px;
-    height: 30px;
-    text-align: center;
-    padding-top: 20px;
+    width: 90%;
+    margin: 0 auto;
+    padding-top: 2%;
+
 }
 
 #maincontent {
-    max-width: 1024px;
+    width: 90%;
     background-color: rgb(235, 235, 235);
-    border-radius: 10px;
+    border-radius: 1%;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 1%;
     color: rgb(0, 141, 153);
+    margin: 0 auto;
 }
 
 #zodiacimage {
-    margin-top: 10px;
+    margin-top: 1%;
 }
 
 #banner {
     text-align: center;
-    border-radius: 10px;
+    border-radius: 1%;
+    margin: 0 auto;
 }
 
 #submit {
@@ -91,18 +97,18 @@ td {
 }
 
 #footer {
-    background-color: rgb(235, 235, 235);
-    border-radius: 10px;
-    font-family: sans-serif;
-    font-size: 14px;
-    color: brown;
-    padding: 10px;
-    margin: 10px 0px;
-    height: 75px;
+  width: 90%;
+  background-color: rgb(235, 235, 235);
+  border-radius: 1%;
+  text-align: center;
+  margin-top: 1%;
+  color: brown;
+  font-size: 80%;
 }
 
 #text {
     max-width:800px;
+    width: 75%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 40px;
@@ -132,22 +138,39 @@ td {
 }
 
 .image {
-    max-width:150px;
-    max-height: 150px;
-    max-margin:25px;
+    max-width: 80%;
+    max-height: 80%;
+
 }
 
 .banner{
-    max-width:392px;
-    max-height: 245px;
+    max-width:38.28%;
+    max-height: 23.92%;
 }
 
 .names {
-    width: 25%;
     float: left;
     text-align: center;
 }
 
 .top {
     margin-left: 150px;
+}
+
+.padd {
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-top: 1%;
+}
+
+@media only screen and (max-device-width: 767px) {
+    .padd {
+      padding-top:1% !important;
+      padding-bottom: 1% !important;
+    }
+
+    .image {
+      width: 80px !important;
+      height:80px !important;
+    }
 }
